2003-01-18 John Fleck <jfleck@inkstain.net>

	* help/C/Makefile.am
	fixing a "doh" - thanks to Dan Mills

2003-01-04 John Fleck <jfleck@inkstain.net>

	add 
	* help/Makefile.am
	* help/C/Makefile.am
	* help/C/drivemount-C.omf
	change
	* Makefile.am
	install help docs

2002-12-14  Fernando Herrera <fherrera@onirica.com>
	* GNOME_DriveMountApplet.server.in.in: added bugzilla attributtes

2002-09-15  Juan Salaverria <rael@vectorstar.net>

	* GNOME_DriveMountApplet.xml: Added a separator in the
	menu. May fix bug #89864

2002-09-19  Mark McLoughlin  <mark@skynet.ie>

	* drivemount.c: (browse_cb), (about_cb), (mount_cb):
	* properties.c: (properties_show): kill the
	HAVE_GTK_MULTIHEAD conditionals - we require gtk
	HEAD now.

2002-08-14  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: link against libscreen-exec.la.

	* drivemount.c: upd.

2002-07-18  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install applet in libexec.

	* GNOME_DriveMountApplet.server.in: move .server.in to
	.server.in.in to allow for libexec dir substitution.

2002-07-11  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add egg-screen-exec.[ch] to the build.

	* drivemount.c:
	(browse_cb): launch nautilus on the same screen as
	the applet.
	(about_cb), (mount_cb): realise dialogs on the same
	screen as the applet.

	* properties.c: (properties_show): ditto.

2002-07-10  Mark McLoughlin  <mark@skynet.ie>

	* drivemount.c: Correct the signatures for verb callback
	methods.
	(browse_cb): remove gmc support, simplify launching and
	display error dialog if it fails.
	(about_cb): use gtk_window_present.
	(mount_cb): use_gtk_window_present and make it return
	void - the clicked signal handler doesn't need a boolean
	return.

	* properties.c: (properties_show): use gtk_window_present.

	* properties.h: don't include libgnome.h

2002-06-03  Arvind Samptur <arvind.samptur@wipro.com>

	* drivemount.c: changed gtk_main_do_event
	to gtk_propagate_event in button_press_hack