@@ -1,3 +1,7 @@
+2003-03-30  Kevin Vandersloot <kfv101@psu.edu>
+
+	* properties.c: fix saving of custom icons. Fixes bug #90922
+
 2003-01-18 John Fleck <jfleck@inkstain.net>
 
 	* help/C/Makefile.am
